--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ body {
   color: white;
   font-style: normal;
   text-align: center;
+  margin-top: 50px;
   margin-bottom: 40px;
 }
 
@@ -105,12 +106,14 @@ body {
   width: 436px;
   flex-direction: column;
   align-items: center;
-  gap: 48px;
+  row-gap: 48px;
+  margin: 89px;
 }
 
 .registration {
   background-color: var(--bs-hero);
   margin-top: 200px;
+  margin-bottom: 200px;
   padding: 15px;
   border-radius: 24px;
   width: 849px;
@@ -152,11 +155,26 @@ body {
   background: var(--bs-btn);
 }
 
-
-.width h1{
-  margin-top:30px;
+.width h1 {
+  margin-top: 30px;
   display: flex;
   flex-wrap: wrap;
   font-size: 30px;
   margin-left: 40px;
+}
+
+.width {
+  width: 500px;
+  height: 100px;
+}
+
+.footer {
+  display: flex;
+  width:1920px;
+  height:490;
+  padding: 64px 328.28px 126px 329px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 48px 48px 0px 0px;
+  background: #fff;
 }
