--- a/style.css
+++ b/style.css
@@ -41,13 +41,29 @@ body {
   margin-top: 90px;
 }
 
+ul {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 12px;
+}
+li {
+  color: #fff;
+
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+}
+
 .heading2 {
   font-size: 72px;
   font-weight: 700;
   color: white;
   font-style: normal;
   text-align: center;
-  margin-top: 50px;
+  margin-top: 40px;
   margin-bottom: 40px;
 }
 
