--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
 }
 .content-container {
   order: 1;
+ 
 }
 
 .image-container {
@@ -213,6 +214,7 @@ li {
   }
   .content-container {
     order: 1;
+   
   }
 
   .image-container {
@@ -239,6 +241,7 @@ li {
     flex-direction: column;
     align-items: center;
     gap: 128px;
+    
   }
 }
 
@@ -318,42 +321,26 @@ li {
     border-radius: 24px 24px 0px 0px;
     background: #fff;
   }
-  .width {
+  .width{
     margin-bottom: 40px;
   }
 
-  /* .ord-4{
-    order:1;
-  }
-
-  .ord-1 {
-    order:2;
-  }
-  .ord-2 {
-    order:3;
-  }
-
-  .ord-3 {
-    order:4;
-  } */
-}
-
-@media screen and (max-width: 767px) {
-  /* .footer-m  {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  } */
-
-  .footer-m .footer .row {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .footer-m .footer .row img {
-    margin-bottom: 20px;
-
-    height: 167.164px;
+  @media (max-width: 431px) {
+    /* Adjust column layout for smaller screens */
+    #form-control .col-md-6,
+    #form-control .col-md-12,
+    #form-control .col-md-4,
+    #form-control .col-md-8 {
+      width: 100%;
+      margin-bottom: 10px; /* Space between rows */
+    }
+  
+    /* Remove margin-bottom for the last element in each row */
+    #form-control .col-md-6:last-child,
+    #form-control .col-md-12:last-child,
+    #form-control .col-md-4:last-child,
+    #form-control .col-md-8:last-child {
+      margin-bottom: 0;
+    }
   }
 }
