--- a/style.css
+++ b/style.css
@@ -7,34 +7,123 @@
 body {
   background-color: var(--bs-blue);
 }
+
 html,
 body {
   overflow-x: hidden;
 }
 
-#mainNavigation {
+/* #mainNavigation {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-
   margin-bottom: 80px;
   padding-bottom: 120px;
+  width: 1920px;
+  height: 4778px;
+} */
+
+.nav-button {
+  display: inline-flex;
+  padding: 6px 30px 6px 31px;
+  justify-content: center;
+  align-items: center;
   background-color: var(--bs-blue);
-  height: 100px;
-}
-#navbarNavDropdown.collapsing .navbar-nav,
-#navbarNavDropdown.show .navbar-nav {
-  background: #037582;
-  padding: 12px;
-}
-.content-container {
-  order: 1;
- 
+  border-radius: 12px;
+  border: 1px solid #ffd26c;
+  color: #ffd26c;
+
+  text-align: center;
+  font-family: Geeza Pro;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 38px;
 }
 
-.image-container {
-  order: 2;
+/*
+.nav-items {
+  display: flex;
+} */
+
+
+.svg1{
+  position: absolute;
+  top: 760px;
+  left: 240px;
+}
+
+.svg2{
+  position: absolute;
+  top: 443px;
+  left: 330px;
+}
+
+.svg3{
+  position: absolute;
+  top: 480px;
+  left: 1000px;
+}
+
+.svg4{
+  position: absolute;
+  top: 1144px;
+  left: 330px;
+}
+
+.svg5{
+  position: absolute;
+  top: 540px;
+  left: 960px;
+}
+.left-svg{
+  position: absolute;
+  top: 1500px;
+  left: 200px;
+}
+
+.left-svg1{
+  position: absolute;
+  top: 1500px;
+  left: 260px;
+}
+
+.left-svg2{
+  position: absolute;
+  top: 1940px;
+  left: 190px;
+}
+
+.right-svg3{
+  position: absolute;
+  top: 1560px;
+ right: 100px;
+}
+.right-svg{
+  position: absolute;
+  top: 1490px;
+ right: 60px;
+}
+.right-svg1{
+  position: absolute;
+  top: 1930px;
+ right: 90px;
+}
+
+.left1{
+  position: absolute;
+  top: 2670px;
+ left: 90px;
+}
+.left2{
+  position: absolute;
+  top: 2695px;
+ left: 120px;
+}
+.left3{
+  position: absolute;
+  top: 3720px;
+ left: 130px;
 }
 
 .heading {
@@ -72,9 +161,19 @@ li {
   margin-bottom: 40px;
 }
 
-.logo {
-  margin-bottom: 100px;
-}
+/* .logo {
+  display: flex;
+  width: 236px;
+  height: 70px;
+  align-items: center;
+  gap: 10.205px;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 6.305px;
+} */
 
 .hero {
   background-color: var(--bs-hero);
@@ -204,25 +303,107 @@ li {
   line-height: 38px;
 }
 
-/* responsive */
-@media screen and (max-width: 431px) {
-  .heroResponsive {
-    width: auto;
+
+/* Responsive */
+
+@media screen and (max-width: 768px) and (min-width: 431px) {
+  .first {
+    color: #fff;
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 88px;
+  }
+  .heading {
+    color: #fff;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 48px; /* 266.667% */
+  }
+  .heading2 {
+    color: #fff;
+
+    text-align: center;
+
+    font-size: 60px;
+    font-style: normal;
+    font-weight: 700;
+    /* line-height: 43px; */
+  }
+
+  .hero {
+    width: 100%;
+    padding-top: 30px;
     height: auto;
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: center;
   }
-  .content-container {
-    order: 1;
-   
+  .hero-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 30px;
+  }
+  .hero-content > h1 {
+    width: 100%;
+    height: auto;
+    margin: 0;
+  }
+  .img-header {
+    max-width: 100%;
+    height: auto;
+    margin-top: 20px;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    -ms-border-radius: 12px;
+    -o-border-radius: 12px;
+    border-radius: 12px;
+  }
+  .subs {
+    margin-top: 10px;
+  }
+  .register {
+    margin-top: 20px;
+    padding-bottom: 50px;
+    flex-direction: column-reverse;
+  }
+  .icons {
+    padding-bottom: 30px;
   }
 
-  .image-container {
-    order: 2;
+  .con-cloud {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 48px;
   }
-}
 
-@media screen and (max-width: 431px) {
+  .cloud {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .cloud img.logo {
+    margin-top: 10px;
+    margin-bottom: 15px;
+  }
+
+  .cloud ul {
+    padding-left: 0;
+    align-items: center;
+  }
+
+  .cloud ul li {
+    margin-bottom: 10px;
+  }
   .registration {
     width: auto;
     height: auto;
@@ -236,52 +417,85 @@ li {
     max-width: 400px;
   }
 
+  #form-control {
+    width: auto;
+    padding-bottom: 50px;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  #form-control .row {
+    display: flex;
+    flex-wrap: wrap;
+    width: auto;
+  }
+
+  #form-control .col-md-6 {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 180px;
+    height: 48px;
+    flex-shrink: 0;
+  }
+  #form-control .col-md-12 {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 384px;
+    height: 48px;
+    flex-shrink: 0;
+  }
+  #form-control .col-md-4 {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 99px;
+    height: 48px;
+    flex-shrink: 0;
+  }
+  #form-control .col-md-8 {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 260px;
+    height: 48px;
+    flex-shrink: 0;
+  }
+
+  #form-control .form-label {
+    margin-bottom: 5px;
+    margin-top: 7px;
+  }
+
+  #form-control .form-control {
+    width: 100%;
+    align-items: center;
+  }
+
+  .speakers-responsive {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 128px;
+  }
+  .speakers-responsive .row {
+    flex-direction: column-reverse;
+  }
+
+  .speakers-responsive .row .col-md-6 {
+    margin-bottom: 200px;
+  }
   .con-2 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 128px;
-    
+    gap: 24px;
   }
-}
-
-@media screen and (max-width: 431px) {
-  .col-m {
-    margin-top: 200px;
-  }
-}
-
-@media screen and (max-width: 431px) {
-  .con-cloud {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 128px;
-  }
-  .cloud {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 48px;
-  }
-  .heading {
-    color: #fff;
-    text-align: center;
-    font-family: Poppins;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 88px;
-  }
-
   .speakers {
+    display: flex;
     width: 429px;
     padding: 48px 0px 67.644px 0px;
     flex-direction: column;
     align-items: center;
     gap: 0.196px;
   }
-
   .box {
     display: flex;
     padding: 8.58px;
@@ -289,58 +503,284 @@ li {
     align-items: center;
     gap: 8.58px;
     width: 429px;
-    height: auto;
+  }
+  .footer .row {
+    display: flex;
+    justify-content: center;
+    /* flex-wrap: wrap; */
+    margin: 0 -5px;
   }
 
+  .footer .row .col-md-3 {
+    flex: 0 0 calc(42.222% - 5px);
+    max-width: calc(42.222% - 5px);
+    margin: 5px;
+    box-sizing: border-box;
+  }
+}
+
+@media screen and (max-width: 430px) and (min-width: 375px) {
+  .first {
+    color: #fff;
+
+    text-align: center;
+
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 48px;
+  }
   .heading2 {
     color: #fff;
-    font-family: Poppins;
-    font-size: 60px;
+    font-size: 36px;
     font-style: normal;
     font-weight: 700;
-    line-height: 88px;
+    line-height: 48px;
   }
 
-  #mainNavigation {
+  .hero {
     width: 100%;
-    height: 80px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    height: auto;
+    flex-direction: column-reverse;
+    align-items: center;
   }
-  .footer-m {
+  .hero-content {
     display: flex;
-    padding: 64px 145px 63.861px 144px;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-radius: 24px 24px 0px 0px;
-    background: #fff;
-  }
-  .footer {
-    display: flex;
-    padding: 64px 145px 63.861px 144px;
-    justify-content: center;
-    align-items: center;
-    border-radius: 24px 24px 0px 0px;
-    background: #fff;
-  }
-  .width{
-    margin-bottom: 40px;
+    width: auto;
+    padding-bottom: 20px;
   }
 
-  @media (max-width: 431px) {
-    /* Adjust column layout for smaller screens */
-    #form-control .col-md-6,
-    #form-control .col-md-12,
-    #form-control .col-md-4,
-    #form-control .col-md-8 {
-      width: 100%;
-      margin-bottom: 10px; /* Space between rows */
-    }
-  
-    /* Remove margin-bottom for the last element in each row */
-    #form-control .col-md-6:last-child,
-    #form-control .col-md-12:last-child,
-    #form-control .col-md-4:last-child,
-    #form-control .col-md-8:last-child {
-      margin-bottom: 0;
-    }
+  .hero-content > h1 {
+    width: 100%;
+    height: auto;
+    margin: 0;
+  }
+  .img-header {
+    width: 295px;
+    height: 223px;
+    flex-shrink: 0;
+    margin-top: 10px;
+    border-radius: 8px;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    -ms-border-radius: 12px;
+    -o-border-radius: 12px;
+    border-radius: 12px;
+  }
+  .subs {
+    margin-top: 10px;
+  }
+  .register {
+    padding-bottom: 30px;
+    margin-top: 20px;
+    flex-direction: column-reverse;
+  }
+  .icons {
+    padding-bottom: 30px;
+  }
+  .btn1 {
+    width: 212px;
+    height: 52px;
+  }
+  .btn1 span {
+    font-size: 18px;
+    display: inline-block;
+    width: 210px;
+  }
+
+  .con-cloud {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 35px;
+  }
+
+  .cloud {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .cloud img.logo {
+    margin-top: 10px;
+    margin-bottom: 15px;
+  }
+
+  .cloud ul {
+    display: flex;
+    width: 326px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+  }
+
+  .cloud ul li {
+    margin-bottom: 10px;
+  }
+  .registration {
+    width: 375px;
+    height: 616px;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 24px;
+    background: #219ebc;
+    box-shadow: 0px 10px 20px 0px #00233a,
+      0px 20px 20px 0px rgba(255, 255, 255, 0.5) inset,
+      0px -20px 20px 0px #00233a inset;
+  }
+
+  .registration > .d-flex {
+    width: 80%;
+    margin: 20px;
+    max-width: 300px;
+  }
+
+  #form-control {
+    width: auto;
+    padding-bottom: 50px;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  #form-control .row {
+    display: flex;
+    flex-wrap: wrap;
+    width: auto;
+  }
+
+  #form-control .col-md-6 {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 160px;
+    height: 48px;
+    flex-shrink: 0;
+  }
+  #form-control .col-md-12 {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 328px;
+    height: 48px;
+    flex-shrink: 0;
+  }
+  #form-control .col-md-4 {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 99px;
+    height: 48px;
+    flex-shrink: 0;
+  }
+  #form-control .col-md-8 {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 221px;
+    height: 48px;
+    flex-shrink: 0;
+  }
+
+  #form-control .form-label {
+    margin-bottom: 5px;
+    margin-top: 7px;
+  }
+
+  #form-control .form-control {
+    width: 100%;
+    align-items: center;
+  }
+
+  .speakers-responsive {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 48px;
+  }
+  .speakers-responsive .row {
+    flex-direction: column-reverse;
+  }
+
+  .speakers-responsive .row .col-md-6 {
+    margin-bottom: 200px;
+  }
+  .con-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+  }
+  .speakers {
+    display: flex;
+    width: 404px;
+    padding: 36px 0px 63px 0px;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .speakers img {
+    object-fit: fill;
+    /* width: 318px;
+height: 305px; */
+  }
+
+  .speakers img .one {
+    width: 407px;
+    height: 305px;
+  }
+  .box {
+    display: flex;
+    padding: 8.58px;
+    justify-content: center;
+    align-items: center;
+    gap: 8.58px;
+    width: 404px;
+  }
+
+  .width {
+    display: flex;
+    width: 348px;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+  }
+  .width h1 {
+    width: auto;
+    height: auto;
+    text-align: center;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 38px;
+  }
+  .width li {
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+  }
+   
+  .footer {
+    border-radius: 24px 24px 0px 0px;
+    width: 1104px;
+    height:745px;
+  }
+  .footer .row {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0 -5px;
+  }
+
+  .footer .row .col-md-3 {
+    max-width: calc(33.333% - 10px);
+    margin: 5px;
+    box-sizing: border-box;
   }
 }
