--- a/style.css
+++ b/style.css
@@ -169,10 +169,20 @@ li {
 
 .hero {
   background-color: var(--bs-hero);
-  width: 1720px;
+  max-width: 100%;
   height: 620px;
   border-radius: 48px;
+
 }
+.img-header {
+  width: 100%;
+  height: auto;
+  flex-shrink: 0;
+  margin-top: 10px;
+  border-radius: 8px;
+
+}
+
 
 .register {
   margin-top: 50px;
@@ -313,7 +323,7 @@ li {
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    line-height: 48px; /* 266.667% */
+    line-height: 48px; 
   }
   .heading2 {
     color: #fff;
@@ -575,8 +585,8 @@ li {
     margin: 0;
   }
   .img-header {
-    width: 295px;
-    height: 223px;
+    width: 100%;
+    height: auto;
     flex-shrink: 0;
     margin-top: 10px;
     border-radius: 8px;
