--- a/style2.css
+++ b/style2.css
@@ -102,7 +102,7 @@ main {
   /* width: 436px; */
   flex-direction: column;
   align-items: center;
-  gap: 192px;
+  gap: 57px;
   /* margin: 89px; */
 }
 .cloud ul {
@@ -118,6 +118,99 @@ main {
   margin-bottom: 15px;
 }
 
+
+.registration {
+  background-color: var(--bs-hero);
+  margin-top: 200px;
+  margin-bottom: 200px;
+  padding: 15px;
+  border-radius: 24px;
+  /* max-width: 849px; */
+  height: 378px;
+  align-content: center;
+  align-items: center;
+  box-shadow: 0px 10px 20px 0px #00233a,
+    0px 20px 20px 0px rgba(255, 255, 255, 0.5) inset,
+    0px -20px 20px 0px #00233a inset;
+}
+
+#form-control input {
+  border-radius: 12px;
+}
+
+#form-control input:focus {
+  box-shadow: 0 0 0 0.25rem rgba(0, 123, 255, 0.25);
+}
+
+.btn2 {
+  background-color: var(--bs-btn);
+  display: inline-flex;
+  padding: 3px 20px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 12px;
+}
+
+.speakers {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 500px; 
+  height: 700px;
+  border-radius: 48px;
+  background: var(--bs-hero);
+  box-shadow: 0px 40px 80px 0px rgba(255, 255, 255, 0.5) inset,
+    0px -40px 80px 0px rgba(0, 0, 0, 0.5) inset;
+}
+
+.box {
+  display: flex;
+  width: 500px;
+  height: 70px;
+  padding: 8px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  background: var(--bs-btn);
+}
+
+.width h1 {
+  margin-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 30px;
+  margin-left: 40px;
+}
+
+.width {
+  min-width: 495px;
+  /* height: 100px; */
+  padding: 30px;
+}
+ 
+.footer {
+  border-radius: 24px 24px 0px 0px;
+  min-width: auto;
+  height: 745px;
+  background-color: white;
+}
+.footer .row {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 0 -5px;
+}
+
+.footer .row .col-md-3 {
+  max-width: calc(33.333% - 10px);
+  margin: 5px;
+  box-sizing: border-box;
+}
+
+/* responsive */
 @media (max-width: 320px) {
   .hero {
     min-width: 320px;
@@ -139,6 +232,14 @@ main {
   .img-header {
     height: 223px;
   }
+  .cloud {
+    display: flex;
+    min-width: 320px;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 48px;
+    margin-bottom: 60px;
+  }
 
   .cloud ul {
     display: flex;
@@ -151,16 +252,80 @@ main {
   .cloud ul li {
     margin-bottom: 10px;
   }
+  .speakers-responsive {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 48px;
+    min-width: 320px;
+
+  }
+  .speakers-responsive .row {
+    flex-direction: column-reverse;
+  }
+
+  /* .speakers-responsive .row .col-md-6 {
+    margin-bottom: 200px;
+  } */
+  .con-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+  }
+  .speakers {
+    display: flex;
+    min-width: 300px;
+    padding: 36px 0px 63px 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+  }
+
+  .one{
+    max-width:500px;
+  }
+  /* .speakers img .one {
+    width: 407px;
+    height: 305px;
+  } */
+  .box {
+    display: flex;
+    padding: 8.58px;
+    justify-content: center;
+    align-items: center;
+    gap: 8.58px;
+    min-width: 360px;
+  }
+
+  .width {
+    display: flex;
+    width: 348px;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+    row-gap: 34px;
+  }
+  .width h1 {
+    width: auto;
+    height: auto;
+    text-align: center;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 38px;
+  }
+  .width li {
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+  }
 }
 
-.cloud {
-  display: flex;
-  min-width: 320px;
-  flex-direction: column;
-  align-items: center;
-  row-gap: 48px;
-  margin-bottom: 60px;
-}
+
 
 @media (max-width: 431px) {
   .hero {
@@ -205,6 +370,77 @@ main {
   .cloud ul li {
     margin-bottom: 10px;
   }
+  .speakers-responsive {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 48px;
+    min-width: 320px;
+
+  }
+  .speakers-responsive .row {
+    flex-direction: column-reverse;
+  }
+
+  /* .speakers-responsive .row .col-md-6 {
+    margin-bottom: 200px;
+  } */
+  .con-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+  }
+  .speakers {
+    display: flex;
+    min-width: 300px;
+    padding: 36px 0px 63px 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+  }
+
+  .one{
+    max-width:500px;
+  }
+  /* .speakers img .one {
+    width: 407px;
+    height: 305px;
+  } */
+  .box {
+    display: flex;
+    padding: 8.58px;
+    justify-content: center;
+    align-items: center;
+    gap: 8.58px;
+    min-width: 360px;
+  }
+
+  .width {
+    display: flex;
+    width: 348px;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+    row-gap: 34px;
+  }
+  .width h1 {
+    width: auto;
+    height: auto;
+    text-align: center;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 38px;
+  }
+  .width li {
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+  }
 }
 @media (max-width: 768px) {
   .hero {
@@ -237,7 +473,7 @@ main {
   }
   .img-header {
     width: 100%;
-    height: 440px;
+    height: auto;
   }
   .register {
     display: flex;
@@ -255,13 +491,148 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-   padding:20px;
-    gap: 12px;
+    padding-left:30px;
+    gap: 15px;
   }
 
   .cloud ul li {
     margin-bottom: 10px;
     min-width : 395px;
     justify-content: center;
+  }
+
+  .registration  {
+    min-width: 432px;
+    height: 594px;
+    padding-top:50px;
+
+
+  }
+
+  #form-control {
+
+    padding-bottom: 50px;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  /* #form-control .row {
+    display: flex;
+    flex-wrap: wrap;
+    
+  } */
+
+  #form-control .col-md-6 {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 180px;
+    height: 48px;
+    flex-shrink: 0;
+  }
+  #form-control .col-md-12 {
+    /* padding-left: 5px;
+    padding-right: 5px; */
+    width: 384px;
+    height: 48px;
+    flex-shrink: 0;
+  }
+  #form-control .col-md-4 {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 99px;
+    height: 48px;
+    flex-shrink: 0;
+  }
+  #form-control .col-md-8 {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 260px;
+    height: 48px;
+    /* flex-shrink: 0; */
+  }
+
+  #form-control .form-label {
+    margin-bottom: 5px;
+    margin-top: 7px;
+  }
+
+  #form-control .form-control {
+    align-items: center;
+  }
+
+  .speakers-responsive {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 48px;
+    min-width: 320px;
+
+  }
+  .speakers-responsive .row {
+    flex-direction: column-reverse;
+  }
+
+  /* .speakers-responsive .row .col-md-6 {
+    margin-bottom: 200px;
+  } */
+  .con-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+  }
+  .speakers {
+    display: flex;
+    min-width: 300px;
+    padding: 36px 0px 63px 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+  }
+
+  .one{
+    max-width:500px;
+  }
+  /* .speakers img .one {
+    width: 407px;
+    height: 305px;
+  } */
+  .box {
+    display: flex;
+    padding: 8.58px;
+    justify-content: center;
+    align-items: center;
+    gap: 8.58px;
+    min-width: 360px;
+  }
+
+  .width {
+    display: flex;
+    width: 348px;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 25px;
+    row-gap: 34px;
+  }
+  .width h1 {
+    width: auto;
+    height: auto;
+    text-align: center;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 38px;
+  }
+  .width li {
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+  }
+
+  .roww{
+    width: 435px;
   }
 }
